--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/books.css">
 <main class="container-md py-4">
     <div class="container-fluid">
         <div class="d-flex align-items-center mb-3 no-print">
@@ -26,35 +27,44 @@
         <div class="container-fluid">
             <% if(typeof results !== "undefined" && results.length > 0) { %>
                 <p class="border border-dark-subtle rounded-3 p-3 mt-1 mb-3"><%= '"' + searchTerm + '"' + ' aramanız için sonuçlar listelendi' %></p>
-                <ul class="list-group rounded-3">
+                <div class="books-field row my-2">
                 <% results.forEach((book) => { %>
-                    <li class="list-group-item">
-                        <div class="row">
-                            <div class="col-8 col-sm-7 col-md-6 text-start">
-                                <div class="row">
-                                    <div class="col-12"><strong>Kitap Adı: </strong><%= book.name %></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12"><strong>Yazar: </strong><%= book.author %></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12"><strong>Kategori: </strong><%= book.category_name %></div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12"><strong>Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
-                                </div>
+                    <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                        <div class="card no-drag">
+                            <div class="position-absolute top-0 left-0 m-2">
+                                <span>
+                                    <i class="bi bi-star-fill text-warning"></i> <%= book.favorites_count > 0 ? book.favorites_count : 0 %>
+                                </span>
+                                <br>
+                                <span>
+                                    <i class="bi bi-chat-left-text"></i> <%= book.comments_count > 0 ? book.comments_count : 0 %>
+                                </span>
                             </div>
-                            <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
-                                <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
-                                    <div class="col">
-                                        <a href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
+                            <a class="stretched-link" href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>">
+                                <div class="card-body">
+                                    <div class="no-print d-flex justify-content-center align-items-center">
+                                        <img src="/assets/img/book.png" class="card-img-top" alt="<%= book.name %>" loading="lazy">
+                                    </div>
+                                    <div>
+                                        <h5 class="card-title"><%= book.name %></h5>
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <strong>Yazar: </strong><span class="card-author"><%= book.author %></span>
+                                            </div>
+                                            <div class="col-12">
+                                                <strong>Kategori: </strong><span class="card-category"><%= book.category_name %></span>
+                                            </div>
+                                            <div class="col-12">
+                                                <strong>Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
-                    </li>
+                    </div>
                 <% }) %>
-                </ul>
+                </div>
                 <% } else { %>
                     <% if(typeof searchTerm !== "undefined") { %>
                         <p class="border border-dark-subtle rounded-3 p-3"><%= '"' + searchTerm + '"' + ' aramanız için sonuç bulunamadı, lütfen farklı bir arama ile tekrar deneyin' %></p>
