--- a/src/views/book-detail.ejs
+++ b/src/views/book-detail.ejs
@@ -70,6 +70,11 @@
                     Yorumunuz başarıyla eklendi
                 </div>
             </div>
+            <div class="container-fluid my-1 alert-null d-none">
+                <div class="alert alert-warning" role="alert">
+                    Lütfen yoruma bir şeyler yazın, boş olamaz!
+                </div>
+            </div>
             <form id="commentForm" method="POST">
                 <input type="hidden" name="comment" id="commentInput" required>
                 <div class="bg-white mb-3" id="comment-editor"></div>
