--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -33,7 +33,7 @@
     </script>
 </head>
 <body>
-    <nav class="main-navbar navbar fixed-top navbar-expand-lg">
+    <nav class="no-print main-navbar navbar fixed-top navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">
             <img src="/assets/img/ekinnsite_logo.png" alt="book.ekinn.site Logo" width="40" height="40">
