--- a/src/views/mybooks.ejs
+++ b/src/views/mybooks.ejs
@@ -38,7 +38,7 @@
                             <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
                                 <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
                                     <div class="col">
-                                        <a href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
+                                        <a href="/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
                                     </div>
                                     <div class="col">
                                         <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning" title="Kitabı Düzenle"><i class="bi bi-pencil-square"></i></a>
