--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -38,7 +38,7 @@
       <a class="navbar-brand" href="/">
         <img src="/assets/img/ekinnsite_logo.png" alt="book.ekinn.site Logo" width="40" height="40">
       </a>
-      <form class="d-flex flex-grow-1 d-inline d-lg-none mx-3" style="max-width: 220px;">
+      <form class="header-search-form d-flex flex-grow-1 d-inline d-lg-none mx-3" style="max-width: 220px;">
         <div class="input-group w-100">
           <input class="form-control header-search-input" type="search" placeholder="Kitap ara..." aria-label="Search">
           <button class="btn btn-primary header-search-btn" type="button"><i class="bi bi-search"></i></button>
@@ -56,7 +56,7 @@
             <a class="nav-link" href="/books" data-path="/books">Kitaplar</a>
           </li>
         </ul>
-        <form class="d-flex flex-grow-1 d-none d-lg-inline mx-3">
+        <form class="header-search-form d-flex flex-grow-1 d-none d-lg-inline mx-3">
           <div class="input-group w-100">
             <input class="form-control header-search-input" type="search" placeholder="Kitap ara..." aria-label="Search">
             <button class="btn btn-primary header-search-btn" type="button"><i class="bi bi-search"></i></button>
