--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="no-print p-3">
   <div class="container-fluid">
     <div class="row text-center">
-      <div class="col">book.ekinn.site developed by <b>Ekin</b>, <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="https://github.com/LordOfTheNight62" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i> GitHub</a></div>
+      <div class="col">2024 - book.ekinn.site developed by <b>Ekin</b>, <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="https://github.com/LordOfTheNight62" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i> GitHub</a></div>
     </div>
   </div>
 </footer>
