--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -11,7 +11,7 @@
             <div class="row my-3">
                 <div class="col-12">
                     <div class="alert alert-warning my-2" role="alert">
-                        Kitap ekleyebilmek için lütfen <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/login">giriş yapın</a>
+                        Kitap ekleyebilmek için lütfen <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/login?continue=<%= path %>">giriş yapın</a>
                     </div>
                 </div>
             </div>
