--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -59,17 +59,17 @@
             </div>
             <div class="row password-validator my-1">
                 <div class="row">
-                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifrenin uzunluğu en az 8 karakter olmalı</div>
+                    <div class="col text-danger"><i class="validator-icon bi bi-x-circle-fill"></i> Şifrenin uzunluğu en az 8 karakter olmalı</div>
                 </div>
                 <div class="row">
-                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 büyük ve 1 küçük harf içermeli</div>
+                    <div class="col text-danger"><i class="validator-icon bi bi-x-circle-fill"></i> Şifren en az 1 büyük ve 1 küçük harf içermeli</div>
 
                 </div>
                 <div class="row">
-                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren en az 1 rakam içermeli</div>
+                    <div class="col text-danger"><i class="validator-icon bi bi-x-circle-fill"></i> Şifren en az 1 rakam içermeli</div>
                 </div>
                 <div class="row">
-                    <div class="col text-danger"><i class="bi bi-exclamation-lg"></i>Şifren "123" veya "6789" gibi art arda yazılmış 2'den fazla tahmin etmesi kolay ve sıralı rakamları içermemeli</div>
+                    <div class="col text-danger"><i class="validator-icon bi bi-x-circle-fill"></i> Şifren "123" veya "6789" gibi art arda yazılmış 2'den fazla tahmin etmesi kolay ve sıralı rakamları içermemeli</div>
                 </div>
             </div>
             <div class="row mb-1">
