--- a/src/views/myfavorites.ejs
+++ b/src/views/myfavorites.ejs
@@ -32,7 +32,7 @@
                                     <div class="col-12"><strong>Kategori: </strong><%= book.category_name %></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12"><strong>Eklendiği Tarih: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
+                                    <div class="col-12"><strong>Favorilere Eklediğin Tarih: </strong><%= new Date(book.added_favorite_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
                                 </div>
                             </div>
                             <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
