--- a/src/views/book-detail.ejs
+++ b/src/views/book-detail.ejs
@@ -55,7 +55,8 @@
             <div class="row mt-5 mb-3 rounded-3 p-3">
                 <div class="col">
                     <h3>Kitap Açıklaması</h3>
-                    <%= book.description %>
+                    <div class="devider"></div>
+                    <%- book.description %>
                 </div>
             </div>
 
