--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:type" content="website">
+    <link rel="canonical" href="https://book.ekinn.site">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
     <meta name="description" content="Ekin'in proje geliştirme sitesi, çeşitli projeler ve geliştirme araçları sunmaktadır. Bu site kitap bilgi portalı projesidir..">
@@ -12,6 +14,10 @@
     <meta property="og:description" content="Ekin'in kitap bilgi portalı projesi">
     <meta property="og:image" content="https://book.ekinn.site/assets/img/ekinnsite_logo.png">
     <meta property="og:url" content="https://book.ekinn.site">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ekin'in Proje Geliştirme Sitesi">
+    <meta name="twitter:description" content="Ekin'in kitap bilgi portalı projesi">
+    <meta name="twitter:image" content="https://book.ekinn.site/assets/img/ekinnsite_logo.png">
     <meta name="google-adsense-account" content="ca-pub-9050645484930137">
     <title><%= title %> - Muhteşem Kitap Sitesi</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
